<resources>
    <string name="app_name">Trab Final</string>
    <string name="agendamentos_disponiveis">_ agendamentos disponíveis</string>
    <string name="agendar_quadras">Agendar Quadra</string>
    <string name="meus_agendamentos">Meus Agendamentos</string>
    <string name="check_in">Check in</string>
    <string name="mapa_de_quadras">Mapa de Quadras</string>
    <string name="deslogar">Deslogar</string>
    <string name="spinner_court_types">Selecione o tipo de quadra</string>
    <string name="spinner_court_numbers">Selecione a quadra</string>
    <string name="confirmar">Confirmar</string>
    <string name="cpf">CPF</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="confirme_senha">Confirme sua senha</string>
    <string name="criar_conta">Crie sua conta</string>
    <string name="ja_conta">Já possui conta? Login</string>
    <string name="login">Log in</string>
    <string name="emailcpf">Email ou CPF</string>
    <string name="registre_se">Registre-se</string>

    <string-array name="court_types">
        <item>Basquete</item>
        <item>Beach Tennis</item>
        <item>Futebol 7</item>
        <item>Futebol de areia</item>
        <item>Futebol infantil</item>
        <item>Poliesportiva</item>
        <item>Tênis</item>
        <item>Vôlei de praia e Futevôlei</item>
    </string-array>
    <string-array name="court_numbers">
        <item>Quadra 11</item>
        <item>Quadra 12</item>
        <item>Quadra 13</item>
        <item>Quadra 14</item>
        <item>Quadra 15</item>
        <item>Quadra 16</item>
        <item>Quadra 17</item>
        <item>Quadra 18</item>
    </string-array>
    <string name="time_8h">8:00</string>
    <string name="time_9h">9:00</string>
    <string name="time_10h">10:00</string>
    <string name="time_11h">11:00</string>
    <string name="time_12h">12:00</string>
    <string name="time_13h">13:00</string>
    <string name="time_14h">14:00</string>
    <string name="time_15h">15:00</string>
    <string name="time_16h">16:00</string>
    <string name="time_17h">17:00</string>
    <string name="time_18h">18:00</string>
    <string name="time_19h">19:00</string>
    <string name="time_20h">20:00</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>